[project]
name = "flask-databases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "blinker==1.9.0",
    "click==8.3.2",
    "flask==3.1.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.3.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "sqlalchemy==2.0.49",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.8",
]
